cambios de estilo en varias pantallas

--- a/F1Club/templates/catalogo/catalogo.html.twig
+++ b/F1Club/templates/catalogo/catalogo.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 	{% include '/compartido/nav.html.twig' with {'escalas': escalas, 'equipos': equipos, 'fabricantes': fabricantes} %}
-		<h1 class="titulo">Catálogo productos</h1>
+		<h1 class="titulo d-flex justify-content-center mt-5">Catálogo productos</h1>
 	    <section id="catalogo" class="catalogo d-flex flex-column">
         <div class="container-fluid">
             <div class="row">
