--- a/F1Club/templates/catalogo/catalogoBusqueda.html.twig
+++ b/F1Club/templates/catalogo/catalogoBusqueda.html.twig
@@ -6,9 +6,9 @@
 
 {% block body %}
 	{% include '/compartido/nav.html.twig' with {'escalas': escalas, 'equipos': equipos, 'fabricantes': fabricantes} %}
-	<h1 class="titulo">Resultados de la búsqueda</h1>
+	<h1 class="titulo d-flex justify-content-center mt-5">Resultados de la búsqueda</h1>
 	{% if productosConImagen is empty %}
-		<p>No se han enontrado resultados</p>
+		<p class="d-flex justify-content-center mt-5">No se han enontrado resultados</p>
 	{% else %}
 	    <section id="catalogo" class="catalogo d-flex flex-column">
         <div class="container-fluid">
@@ -33,4 +33,6 @@
         </div>
     	</section>
 	{% endif %}
+
+	{% include '/compartido/footer.html.twig' %}
 {% endblock %}
