--- a/F1Club/public/styles/style.css
+++ b/F1Club/public/styles/style.css
@@ -35,7 +35,7 @@ nav li a {
 }
 
 .menu2 {
-    background-color: rgba(255, 0, 0, 0.808);
+    background-color: red;
 }
 
 .menu2 i {
@@ -51,7 +51,7 @@ nav li a {
 .logo {
     width: 15rem;
     margin-top: -60px;
-    background-color: rgba(255, 0, 0, 0.808);
+    background-color: red;
     padding: 1rem;
     border-radius: 60%;
 }
@@ -87,6 +87,21 @@ nav li a {
     font-size: 2rem;
     margin-left: 5rem;
     color: black;
+}
+
+.dropdown-item:hover {
+    background-color: red;
+    color: white !important;
+}
+
+/*Form*/
+.inputForm input {
+    display: flex;
+    justify-content:center;
+} 
+
+label {
+    margin-right: 2rem;
 }
 
 /*Sección presentación*/
@@ -224,45 +239,16 @@ li.timeline-item {
     left: 2rem;
 }
 
-/* Timeline item circle marker */
-li.timeline-item::before {
-    content: ' ';
-    background: rgba(255, 0, 0, 0.808);
-    display: inline-block;
-    position: absolute;
-    border-radius: 50%;
-    border: 3px solid rgba(255, 0, 0, 0.808);
-    left: 11px;
-    width: 14px;
-    height: 14px;
-    z-index: 400;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+/*Pedidos*/
+.accordion-button:not(.collapsed) {
+    background-color: white; 
 }
 
-.listaSliderProductos {
-    list-style-type: none;
-    position: relative;
-}
+/*Deseos*/
 
-.productoItem {
-    margin: 20px;
-    width: 50%;
-}
+li {
+    list-style-type: none !important;
 
-.catalogo3 .carousel {
-    width: 100%;
-    max-height: 575px;
-}
-
-.catalogo3 .carousel-item .container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 50px;
-    margin-top: 50px;
 }
 
 /*Footer*/
