--- a/F1Club/templates/usuario/vistaPedidos.html.twig
+++ b/F1Club/templates/usuario/vistaPedidos.html.twig
@@ -6,23 +6,25 @@
 
 {% block body %}
 	{% include '/compartido/nav.html.twig' with {'escalas': escalas, 'equipos': equipos, 'fabricantes': fabricantes} %}
-	<div class="accordion" id="accordionExample">
+	<h1 class="titulo d-flex justify-content-center mt-5">Tus pedidos</h1>
+	<div class="accordion px-4 pt-3" id="accordionPedidos">
 		{% if pedidosUsuario is empty %}
 			<p>Todavía no se han realizado pedidos</p>
-
 		{% else %}
 		{% for pedido in pedidosUsuario %}
 			<div class="accordion-item">
 				<h2 class="accordion-header">
 					<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{pedido.id}}" aria-expanded="false" aria-controls="collapse{{pedido.id}}">
-						<p>Pedido realizado el día:
+						<p>
+							<i class="bi bi-bag-check"></i>
+							Pedido realizado el día:
 							{{pedido.fechaPedido|date('Y-m-d')}}
 							- Coste:
-							{{pedido.costeTotal}}</p>
+							{{pedido.costeTotal}}
+						</p>
 					</button>
 				</h2>
-				<div id="collapse{{pedido.id}}" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-
+				<div id="collapse{{pedido.id}}" class="accordion-collapse collapse" data-bs-parent="#accordionPedidos">
 					<div class="accordion-body">
 						<ul>
 							{% for lineaPedido in pedido.lineasPedido %}
@@ -33,10 +35,11 @@
 							{% endfor %}
 						</ul>
 					</div>
-
 				</div>
 			</div>
 		{% endfor %}
 		{% endif %}
 	</div>
+
+	{% include '/compartido/footer.html.twig' %}
 {% endblock %}
