--- a/F1Club/templates/compartido/footer.html.twig
+++ b/F1Club/templates/compartido/footer.html.twig
@@ -32,7 +32,7 @@
                         </ul>
                     </div>
 
-                    <div class="col-6">
+                    <div class="col-6 suscripcion">
                         <form>
                             <h6>Subscribete a nuestro newsletter</h6>
                             <p>Recibirás noticias mensuales</p>
