--- a/F1Club/public/styles/style.css
+++ b/F1Club/public/styles/style.css
@@ -420,6 +420,17 @@ section {
     }
 }
 
+@media screen and (max-width:900px) {
+ .producto {
+    margin-left: 30px;
+    margin-right: 30px;
+ }
+
+ .suscripcion {
+    visibility: hidden;
+ }
+}
+
 @media screen and (max-width:1000px) {
     ul.timeline {
         width: 400px;
